--- a/assets/www/css/views/_location.scss
+++ b/assets/www/css/views/_location.scss
@@ -23,8 +23,8 @@
         margin: $padding 0px;
 
         ul {
-            margin: 0;
-            padding: 0 0 -10px 0;
+            margin: 0 0 -10px 0;
+            padding: 0;
         }
         li {
 
